 * Fixed some non-i18l phrases in Upload.
 * Less confusing error message for missing citation files. Fixes #3369.
 
2008-12-04 cjg
 * Fixed oddity that toolbox.pm defined toolkit.pm. Closes #3464

2008-12-05 cjg
 * Fixed issue with level one menu title phrases. This appears to fix #3466.

2008-12-05 tdb
 * Always test "index.html" when deciding whether to update abstract page,
    fixing #3479

2008-12-05 cjg
 * Counts on view-by-name were broken, now not. Fixed #3477.
 * Links to empty pages are now rendered as text, not links. Fixes #3476.
 * Browse by name no longer spits warnings if given part isn't there. #3478

2008-12-08 tdb
 * Use get_plugin_class to determine the Plugin class, fixes #3428
 * Fixed EPrints invalid user errors when starting indexer from apache
 * Fixed double-URLs in RSS2 media output

2008-12-12 tdb
 * Support plugin "tools" in saved searches, fixing #3462

2008-12-12 cjg
 * Fixed IE issues in javascript toggles recently introduced.

======================================================================
EPRINTS-3.1.2
======================================================================

2008-12-19 cjg
 * Fixed incorrect "use" line in MultilineCSV export plugin.

======================================================================
EPRINTS-3.1.2.1
======================================================================

2009-01-16 tdb
 * Strip all whitespace from DOIs & Pubmed IDs, fixing #3439

2009-01-27 tdb
 * Don't encode pathing in files, fixing #3393

2009-01-29 cjg
 * Added ranges for views.
 * Introduced new view configuration format.
 * Updated defaults views.pl to show current config.

2009-02-02 tdb
 * Allow https access to anything under /cgi/, fixing autocomplete scripts

2009-02-11 tdb
 * Unicode Fixes:
 	- Return bytes from LibXML & DOM nodeValue() calls
	- Send bytes via Net::Cmd (fixes wide-character warning)
	- Added utf-8 support to email headers (subject + names)
 * Changed string style to be consistent in Email.pm 
